examples/spanned_error.run.stderr
Error: error: woosh
 --> examples/spanned_error.rs:4:40
  |
4 |     parse().map_err(|err| err.wrap_str(Spanned::here("woosh")))?;
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |     Ok(())
...
8 | fn parse() -> Result<(), Error> {
9 |     Err(Error::str("kaboom"))?;
  |         ^^^^^^^^^^^^^^^^^^^^^^^ kaboom
  |
